# responses/OrganisationResponse.go
@@ -1,0 +1,7 @@
+package responses
+
+type OrganisationResponse struct {
+	Status  int                    `json:"status"`
+	Message string                 `json:"message"`
+	Data    map[string]interface{} `json:"data"`
+}
